--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,3 +1,6 @@
 {
-  "dependencies": {}
+  "dependencies": {
+    "com.unity.2d.animation": "1.0.16-preview",
+    "com.unity.2d.ik": "1.0.6-preview"
+  }
 }
